# displayer

./: README.md
displayer/: Cargo.toml
displayer/src/: index.js  main.rs  style.css
displayer/src/templates/: index.html
displayer/templates/: index.html
displayer_v2/: Cargo.toml  package-lock.json  package.json
displayer_v2/src/: main.rs
displayer_v2/templates/: index.html
