[package]
name = "displayer_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
kamadak-exif = "0.5.5"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
